--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,3 @@
 spring.application.name=service2
-server.port=7070
-eureka.client.serviceUrl.defaultZone=http://localhost:8761/eureka/
+
+eureka.client.serviceUrl.defaultZone=http://localhost:8761/eureka/,http://localhost:8762/eureka/
