--- a/pom.xml
+++ b/pom.xml
@@ -62,6 +62,12 @@
         <groupId>org.springframework.cloud</groupId>
         <artifactId>spring-cloud-starter-netflix-eureka-client</artifactId>
     </dependency>
+    	
+    	<dependency>
+	        <groupId>org.springframework.cloud</groupId>
+	        <artifactId>spring-cloud-starter-sleuth</artifactId>
+    	</dependency>
+    	
 		
 <!-- 		<dependency>
 		    <groupId>org.springframework.cloud</groupId>
@@ -74,6 +80,10 @@
 	    	<artifactId>eureka-client</artifactId>
 	    	<version>1.9.3</version>
 		</dependency> -->
+		<dependency>
+		    <groupId>org.springframework.cloud</groupId>
+		    <artifactId>spring-cloud-starter-zipkin</artifactId>
+		</dependency>
  	</dependencies>
 
 	<build>
