--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,6 @@
 spring.application.name=service2
 
 eureka.client.serviceUrl.defaultZone=http://localhost:8761/eureka/,http://localhost:8762/eureka/
+
+spring.zipkin.base-url=http://localhost:9411/
+spring.sleuth.sampler.probability=1
